--- a/environment.yml
+++ b/environment.yml
@@ -3,14 +3,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - bokeh >= 2.0.1
   - ipykernel
   - ipython
   - lmfit >= 0.9.7
-  - matplotlib >= 2.2.2
   - mpmath >= 1.1.0
   - numpy >= 1.13.3
   - pandas >= 0.22.0
   - pip
   - python >= 3.8
   - scipy >= 1.0.1
-  - seaborn >= 0.8.1
