--- a/environment.yml
+++ b/environment.yml
@@ -6,10 +6,13 @@ dependencies:
   - bokeh >= 2.0.1
   - ipykernel
   - ipython
-  - lmfit >= 0.9.7
   - mpmath >= 1.1.0
-  - numpy >= 1.13.3
+  - numpy >= 1.18.4
   - pandas >= 0.22.0
   - pip
   - python >= 3.8
-  - scipy >= 1.0.1
+  - scipy >= 1.4.1
+  - seaborn
+  - jupyter
+  - pip:
+      - lmfit >= 1.0.1
